# plantstate

./: .env.example  .gitignore  Dockerfile.addon  README.md  SECURITY.md  docker-compose.yml  environment.yml  pyproject.toml  repository.yaml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: addon-build.yml
backend/: Dockerfile  seed.py
backend/api/: routes.py  schemas.py
backend/application/: json_extract.py  llm_contract.py  services.py
backend/domain/: __init__.py  enums.py  events.py  models.py  rules.py  tips.py
backend/infrastructure/: database.py  ha_adapter.py  repository.py
backend/tests/: fixtures.json  test_json_extract.py  test_sensor_serialization.py
backend/tests/contract/: test_llm_contract.py
backend/tests/e2e/: test_lifecycle.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_events.py  test_rules.py
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  labels.ts  theme.ts
frontend/src/components/: PlantImage.tsx  RelevantTaskCard.tsx  RuleCard.tsx
frontend/src/pages/: DashboardPage.tsx  PlantDetailPage.tsx  PlantListPage.tsx
ha-addon/: config.json  config.yaml  lovelace-card.yaml  lovelace-config.yaml  plant-state-card.js  run.sh
